--- a/index.html
+++ b/index.html
@@ -18,11 +18,22 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sapiente ea ipsam aliquam, omnis laboriosam,
         delectus labore rerum, eos est nulla consectetur saepe doloremque ut consequuntur sed voluptatibus quod earum?
     </p> -->
-    <div class="caja1">Lorem ipsum</div>
+    <div class="caja1">AAAA</div>
+    <div class="caja2">EEEE</div>
+    <div class="caja3" id="foo">IIII</div>
+    <a href="#" title="mi*titulo">Enlace roto:D</a>
+    <br>
+    <a href="#">Otro enlace :D</a>
+    <br>
+    <button>BOTON xd</button>
+    <form action="">
+        <label for="fecha">Fecha :c</label>
+        <br>
+        <input name="fecha" type="date" disabled>
+        <br>
+        <input type="text" type="password" id="password">
+    </form>
 
-    <div class="caja2">Lorem, ipsum dolor </div>
-
-    <div class="caja3">Lorem ipsum dolor </div>
 
 </body>
 
