--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         delectus labore rerum, eos est nulla consectetur saepe doloremque ut consequuntur sed voluptatibus quod earum?
     </p> -->
     <div class="caja1">AAAA</div>
-    <div class="caja2">EEEE</div>
-    <div class="caja3" id="foo">IIII</div>
+    <!-- <div class="caja2">EEEE</div>
+    <div class="caja3" id="foo">IIII</div> -->
     <a href="#" title="mi*titulo">Enlace roto:D</a>
     <br>
     <a href="#">Otro enlace :D</a>
